--- a/src/app/components/cow-list/cow-list.component.html
+++ b/src/app/components/cow-list/cow-list.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!showForm">
-  <h1>Cow Catalogue</h1>
+  <h1>Cow Catalog</h1>
 
   <app-search-filter-cow-list (searhFilter)="onSearchFilterList($event)"></app-search-filter-cow-list>
 
